--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ li {
 </head>
 <body>
 <h1>Menu</h1>
-<div class=menu style="background-image: Breakfast.jpg">
+<div class=menu style="background-image: url('Breakfast.jpg')">
   <ul>
     <li>menu1</li>
     <li>menu2</li>
