--- a/index.html
+++ b/index.html
@@ -34,32 +34,25 @@ li {
   margin-bottom: 10px;
 }
 
-#breakfast {
-  background-image: url('breakfast.jpg');
-  background-repeat: no-repeat;
-}
 
-#lunch {
-  background-image: url('lunch.jpg');
-  background-repeat: no-repeat;
-}
-
-#dinner {
-  background-image: url('dinner.jpg');
-  background-repeat: no-repeat;
 </style>
 
 
 </head>
 <body>
 <h1>Menu</h1>
-<div class=menu style="background-image: url('Breakfast.jpg')">
-  <ul>
-    <li>menu1</li>
-    <li>menu2</li>
-  </ul>
+<div class="menu" style="background-image: url('Breakfast.jpg')">
+  
 
 </div>
+<div class="menu" style="background-image: url('Lunch.jpg')">
+	
+</div>
+
+<div class="menu" style="background-image: url('Dinner.jpg')">
+	
+</div>
+	
 	
 </body>
 </html>
