--- a/index.html
+++ b/index.html
@@ -43,15 +43,14 @@ li {
 <h1>Menu</h1>
 <div class="menu" style="background-image: url('Breakfast.jpg')">
   
+	<p>pruebaaa</p>
 
 </div>
 <div class="menu" style="background-image: url('Lunch.jpg')">
-	
-</div>
+	<p>pruebaaa</p></div>
 
 <div class="menu" style="background-image: url('Dinner.jpg')">
-	
-</div>
+	<p>pruebaaa</p></div>
 	
 	
 </body>
