--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@ h2 {
 <h1>Menu</h1>
 <div class="menu" style="background-image: url('Breakfast.jpg')">
   
-	<p style="background-color: white;">AQUI VA EL MENU</p>
+	<p style="color: white;">AQUI VA EL MENU</p>
 
 </div>
 <div class="menu" style="background-image: url('Lunch.jpg')">
-	<p style="background-color: white;"pruebaaa>AQUI EL MENU</p></div>
+	<p style="color: white;"pruebaaa>AQUI EL MENU</p></div>
 
 <div class="menu" style="background-image: url('Dinner.jpg')">
-	<p style="background-color: white;"pruebaaa>AQUI EL MENU</p></div>
+	<p style="color: white;"pruebaaa>AQUI EL MENU</p></div>
 	
 	
 </body>
