--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@ h2 {
 <h1>Menu</h1>
 <div class="menu" style="background-image: url('Breakfast.jpg')">
   
-	<p style="color: white;">AQUI VA EL MENU</p>
+	<p style="color: white;"><h2>Breakfast Menu</h2>
+    <ul>
+      <li>Pancakes</li>
+      <li>Omelette</li>
+      <li>Fruit Salad</li>
+      <li>Coffee</li>
+      <li>Orange Juice</li>
+    </ul></p>
 
 </div>
 <div class="menu" style="background-image: url('Lunch.jpg')">
