--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@ h2 {
 <body>
 <h1>Menu</h1>
 <div class="menu" style="background-image: url('Breakfast.jpg')">
-  
 	<p style="color: white;"><h2>Breakfast Menu</h2>
     <ul>
       <li>Pancakes</li>
@@ -42,13 +41,28 @@ h2 {
       <li>Coffee</li>
       <li>Orange Juice</li>
     </ul></p>
-
 </div>
 <div class="menu" style="background-image: url('Lunch.jpg')">
-	<p style="color: white;"pruebaaa>AQUI EL MENU</p></div>
-
+	<p style="color: white;<h2>Lunch Menu</h2>
+    <ul>
+      <li>Caesar Salad</li>
+      <li>Grilled Chicken Sandwich</li>
+      <li>Pasta Primavera</li>
+      <li>Iced Tea</li>
+      <li>Lemonade</li>
+    </ul>
+</div>
 <div class="menu" style="background-image: url('Dinner.jpg')">
-	<p style="color: white;"pruebaaa>AQUI EL MENU</p></div>
+	<p style="color: white;<div class="menu" id="dinner">
+    <h2>Dinner Menu</h2>
+    <ul>
+      <li>Filet Mignon</li>
+      <li>Salmon with Lemon Butter</li>
+      <li>Mushroom Risotto</li>
+      <li>Red Wine</li>
+      <li>Chocolate Cake</li>
+    </ul>
+  </div>
 	
 	
 </body>
